// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card component component snapshots default 1`] = `
<div>
  <div
    class="usa-card  "
  >
    <div
      class="usa-card__container"
    >
      <div
        class="usa-card__header"
      >
        <h2
          class="usa-card__heading"
        >
          Card Header Text
        </h2>
      </div>
      <div
        class="usa-card__body"
      >
        <p
          class="usa-card__text"
        >
          Card Body Text
        </p>
      </div>
      <div
        class="usa-card__footer"
      />
    </div>
  </div>
</div>
`;

exports[`Card component component snapshots media and child component 1`] = `
<div>
  <div
    class="usa-card  "
  >
    <div
      class="usa-card__container"
    >
      <div
        class="usa-card__header"
      >
        <h2
          class="usa-card__heading"
        >
          Card Header Text
        </h2>
      </div>
      <div
        class="usa-card__media "
      >
        <div
          class="usa-card__img"
        >
          <img
            alt="Card Media Alt Text"
            src="https://designsystem.digital.gov/img/introducing-uswds-2-0/built-to-grow--alt.jpg"
          />
        </div>
      </div>
      <div
        class="usa-card__body"
      >
        <p
          class="usa-card__text"
        >
          Card Body Text
        </p>
      </div>
      <div
        class="usa-card__footer"
      >
        <button
          aria-label="Visit button"
          class="display-flex usa-button usa-button-- "
        >
          <span
            class="padding-x-05"
          >
            Visit
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Card component component snapshots media and child component in flag 1`] = `
<div>
  <div
    class="usa-card usa-card--flag "
  >
    <div
      class="usa-card__container"
    >
      <div
        class="usa-card__header"
      >
        <h2
          class="usa-card__heading"
        >
          Card Header Text
        </h2>
      </div>
      <div
        class="usa-card__media "
      >
        <div
          class="usa-card__img"
        >
          <img
            alt="Card Media Alt Text"
            src="https://designsystem.digital.gov/img/introducing-uswds-2-0/built-to-grow--alt.jpg"
          />
        </div>
      </div>
      <div
        class="usa-card__body"
      >
        <p
          class="usa-card__text"
        >
          Card Body Text
        </p>
      </div>
      <div
        class="usa-card__footer"
      >
        <button
          aria-label="Visit button"
          class="display-flex usa-button usa-button-- "
        >
          <span
            class="padding-x-05"
          >
            Visit
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Card component component snapshots media and child component in flag layout right 1`] = `
<div>
  <div
    class="usa-card usa-card--flag usa-card--media-right"
  >
    <div
      class="usa-card__container"
    >
      <div
        class="usa-card__header"
      >
        <h2
          class="usa-card__heading"
        >
          Card Header Text
        </h2>
      </div>
      <div
        class="usa-card__media "
      >
        <div
          class="usa-card__img"
        >
          <img
            alt="Card Media Alt Text"
            src="https://designsystem.digital.gov/img/introducing-uswds-2-0/built-to-grow--alt.jpg"
          />
        </div>
      </div>
      <div
        class="usa-card__body"
      >
        <p
          class="usa-card__text"
        >
          Card Body Text
        </p>
      </div>
      <div
        class="usa-card__footer"
      >
        <button
          aria-label="Visit button"
          class="display-flex usa-button usa-button-- "
        >
          <span
            class="padding-x-05"
          >
            Visit
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Card component component snapshots media with inset and header first 1`] = `
<div>
  <div
    class="usa-card  "
  >
    <div
      class="usa-card__container"
    >
      <div
        class="usa-card__header"
      >
        <h2
          class="usa-card__heading"
        >
          Card Header Text
        </h2>
      </div>
      <div
        class="usa-card__media--exdent usa-card__media--inset"
      >
        <div
          class="usa-card__img"
        >
          <img
            alt="Card Media Alt Text"
            src="https://designsystem.digital.gov/img/introducing-uswds-2-0/built-to-grow--alt.jpg"
          />
        </div>
      </div>
      <div
        class="usa-card__body"
      >
        <p
          class="usa-card__text"
        >
          Card Body Text
        </p>
      </div>
      <div
        class="usa-card__footer"
      >
        <button
          aria-label="Visit button"
          class="display-flex usa-button usa-button-- "
        >
          <span
            class="padding-x-05"
          >
            Visit
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
